# meridian-roller

./: .env.example  .gitignore  .prettierrc  Cargo.toml  eslint.config.js  initialize.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vercel.json  vite.config.ts
.soroban/contract-ids/: dice_game.json
.soroban/identity/: goose.toml
contracts/deployer/: Cargo.toml
contracts/deployer/src/: lib.rs
contracts/dice-game/: Cargo.toml
contracts/dice-game/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/dice-game/test_snapshots/test/: test.1.json  test_can_be_evil_with_called_game.1.json  test_can_be_kind_with_called_game.1.json  test_cannot_be_evil_with_uncalled_game.1.json  test_cannot_be_kind_with_uncalled_game.1.json  test_cannot_call_game_twice.1.json  test_cannot_call_uninitialized_game.1.json  (+8 more)
contracts/simplified-game/: Cargo.toml
contracts/simplified-game/src/: lib.rs
src/: app.css  app.html
src/lib/: passkeyClient.ts
src/lib/components/: DieRoll.svelte  Footer.svelte  GameStats.svelte  Header.svelte  Leaderboard.svelte  LoginButtons.svelte  OddsAlert.svelte  RollerStats.svelte  TruncatedAddress.svelte
src/lib/contracts/: deployer.ts  deployerContract.ts  diceGameContract.ts  dice_game.ts
src/lib/server/: passkeyServer.ts
src/lib/static/: data.ts
src/lib/stores/: contractAddress.ts  contractId.ts  keyId.ts
src/lib/utils/: deploy.ts  index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/game/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
src/routes/new/: +page.svelte
(+14 files in other folders)
